01. setuidgid.c: moved set_additional_groups function to libqmail
- 04/03/2023
02. run_init.c: return -1 for name too long
03. supervise.c: disable using /run if DISABLE_RUN env variable is set
04. svok.c, svc.c, svstat.c: check for supervise/ok in original service dir
    before run filesystem
05. svscan.c: unset use_run if /run, /var/run is missing
06. svscan.c: skip directories starting with .

* Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.1-1.1%{?dist}
Release 1.1.1 Start 12/09/2022 End 30/11/2023
======= Release Highlights ================================================
o added auto-start, auto-stop feature based on presence/absense of down file
o added subreaper functionality - ability to reap grandchilds
===========================================================================
- 12/09/2022
01. Added runpod command to execute indimail-mta, indimail in a containerized
    pod
- 18/09/2022
02.  instcheck.in: use uininstaller only for ucspi-tcp
- 19/09/2022
03. runpod: added SYS_NICE capability to defaults
- 01/11/2022
04. runpod: fixed port clash
- 07/11/2022
05. runpod: prevent output of test on stdout
- 08/11/2022
06. runpod: added case for name=svscan to run in foreground
- 09/11/2022
07. docker-entrypoint: fixed fix-queue argument for slowq
08. svps.in, minisvc.in, qmailctl.sh: replaced deprecated egrep with grep -E
- 10/11/2022
09. docker-entrypoint: fixed extra_args variable getting clobbered.
- 14/11/2022
10. minisvc: when importing variables don't treat existing variables as error
- 17/11/2022
11. qmailctl.sh: made dash portable
- 27/11/2022
12. moved set-network-wait to Linux specific LIBEXEC
- 02/12/2022
13. supervise.c: sleep SCANINTERVAL seconds if supervise for waited service is
    not running
14. svscan.c: use 'down' file to start or stop service automatically.
   auto-start, auto-stop feature
15. svscan.c: scan immediately instead of SCANINTERVAL on termination of a